--- a/connections.css
+++ b/connections.css
@@ -3,6 +3,12 @@
     padding: 0;
 }
 
+body {
+    background-color: #000;
+    color: #fff;
+    font-family: Arial, sans-serif;
+}
+
 #map {
     height: 600px;
     width: 1000px;
