--- a/connections.css
+++ b/connections.css
@@ -15,6 +15,8 @@ body {
     background-color: rgba(112, 95, 48, 0.7);
     color: #fff;
     font-size: 30px;
+    width: 300px;
+    height: 400px;
 }
 
 #map {
