--- a/connections.css
+++ b/connections.css
@@ -15,8 +15,6 @@ body {
     background-color: rgba(112, 95, 48, 0.7);
     color: #fff;
     font-size: 30px;
-    width: 300px;
-    height: 400px;
 }
 
 #map {
@@ -120,7 +118,8 @@ body {
     justify-content: center;
     align-items: center;
     text-align: center;
-    min-height: 100vh;
+    min-height: 30vh;
+    min-width: 30vw;
 }
 
 /* DARK MODE */
