--- a/connections.css
+++ b/connections.css
@@ -15,8 +15,8 @@ body {
     background-color: rgba(112, 95, 48, 0.7);
     color: #fff;
     font-size: 30px;
-    min-width: 33vw;
-    min-height: 33vh;
+    width: 400px;
+    height: 300px;
 }
 
 #map {
