--- a/connections.css
+++ b/connections.css
@@ -10,6 +10,16 @@ body {
     overflow: hidden;
 }
 
+#divLoadingContainer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    min-height: 100vh;
+    background-color: rgba(255,255,255, 0.2);
+    border: solid 1px #0F0;
+}
+
 #divLoading {
     padding: 20px;
     background-color: rgba(112, 95, 48, 0.7);
@@ -17,6 +27,7 @@ body {
     font-size: 30px;
     width: 400px;
     height: 300px;
+    border: solid 1px #F00;
 }
 
 #map {
@@ -114,14 +125,6 @@ body {
         #divConnections table tr:nth-of-type(2n+1) {
             background-color: rgba(255,255,255,0.1)
         }
-
-.center-screen {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    min-height: 100vh;
-}
 
 /* DARK MODE */
 .leaflet-layer,
