--- a/connections.css
+++ b/connections.css
@@ -11,23 +11,28 @@ body {
 }
 
 #divLoadingContainer {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(255, 255, 255, 0.1);
     display: flex;
-    justify-content: center;
     align-items: center;
+    justify-content: center;
     text-align: center;
-    min-height: 100vh;
-    background-color: rgba(255,255,255, 0.2);
-    border: solid 1px #0F0;
+    font-size: 2em;
+    color: #333;
+    z-index: 9999;
 }
 
 #divLoading {
-    padding: 20px;
-    background-color: rgba(112, 95, 48, 0.7);
+    padding: 100px;
+    background-color: rgba(112, 95, 48, 0.9);
     color: #fff;
     font-size: 30px;
-    width: 400px;
-    height: 300px;
-    border: solid 1px #F00;
+    border: solid 1px #000;
+    border-radius: 20px;
 }
 
 #map {
