--- a/connections.css
+++ b/connections.css
@@ -94,15 +94,27 @@ body {
 
 @keyframes tableTransmitting {
     0% {
-        background-color: #ffeecc;
+        background-color: rgba(255, 170, 68, 0);
     }
 
-    50% {
-        background-color: #ffaa44;
+    20% {
+        background-color: rgba(255, 170, 68, 0.25);
+    }
+
+    40% {
+        background-color: rgba(255, 170, 68, 0.75);
+    }
+
+    60% {
+        background-color: rgba(255, 170, 68, 1);
+    }
+
+    80% {
+        background-color: rgba(255, 170, 68, 0.75);
     }
 
     100% {
-        background-color: #ffeecc;
+        background-color: rgba(255, 170, 68, 0.25);
     }
 }
 
@@ -128,7 +140,7 @@ body {
     #divConnections .cell-transmitting {
         opacity: 1.0;
         animation-name: transmitting;
-        animation-duration: 1s;
+        animation-duration: 2s;
         animation-iteration-count: infinite;
     }
 
@@ -153,7 +165,7 @@ body {
         }
 
         #divConnections table tr td:nth-of-type(4) {
-            width: 200px;
+            width: 300px;
             overflow: hidden;
         }
 
